# MiloBitcoin

./: .env.example  .gitignore  README.md  environment.yml  environment_docling.yml  milo_bitcoin_main.py  milo_finance_main.py  requirements.txt
fine_tune/: README.md  pyproject.toml
fine_tune/final_data/: test.jsonl
fine_tune/training_scripts/: config.yaml  simple_trainer.py  unsloth_trainer.py
rag_test/: README.md
rag_test/test_scripts/: granite_docling.py  phase1_basic_verification.py  phase1_fixed_verification.py  phase2_api_based.py  phase2_bitcoin_cli.py
scripts/: batch_process_docs.py  granite_docling.py
scripts/config/: processing_config.yaml
scripts/utils/: __init__.py  file_scanner.py  format_detector.py  quality_checker.py
tests/: test_data_collection.py
